// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: sidebar should write sidebar for exports' 1`] = `
"## typedoc-plugin-markdown

- [Home](../wiki/Home)
- [Exports](../wiki/Exports)

### Namespaces

- [namespaceA](../wiki/Namespace-namespaceA)
- [namespaceB](../wiki/Namespace-namespaceB)

### Enumerations

- [enumItemA](../wiki/Enumeration-enumItemA)
- [enumItemB](../wiki/Enumeration-enumItemB)

### Classes

- [ClassItemA](../wiki/Class-ClassItemA)
- [ClassItemB](../wiki/Class-ClassItemB)
- [SomeNestedClass](../wiki/Class-SomeNestedClass)

### Interfaces

- [InterfaceItemA](../wiki/Interface-InterfaceItemA)
- [InterfaceItemB](../wiki/Interface-InterfaceItemB)
"
`;

exports[`Theme: sidebar should write sidebar for modules' 1`] = `
"## typedoc-plugin-markdown


### Modules

- [breadcrumbs](../wiki/Module-breadcrumbs)
- [theme](../wiki/Module-theme)

### Namespaces

- [namespaceA](../wiki/Namespace-namespaceA)
- [namespaceB](../wiki/Namespace-namespaceB)

### Enumerations

- [enumItemA](../wiki/Enumeration-enumItemA)
- [enumItemB](../wiki/Enumeration-enumItemB)

### Classes

- [Breadcrumbs](../wiki/Class-Breadcrumbs)
- [ClassItemA](../wiki/Class-ClassItemA)
- [ClassItemB](../wiki/Class-ClassItemB)
- [SomeNestedClass](../wiki/Class-SomeNestedClass)

### Interfaces

- [InterfaceItemA](../wiki/Interface-InterfaceItemA)
- [InterfaceItemB](../wiki/Interface-InterfaceItemB)
"
`;

exports[`Theme: url should getUrls with readme=none' 1`] = `
Array [
  "Home.md",
  "Home.md#declarationitema",
  "Home.md#declarationitemb",
  "Home.md#functionitema",
  "Home.md#functionitemb",
  "Namespace-namespaceA.md",
  "Class-SomeNestedClass.md",
  "Class-SomeNestedClass.md#constructor",
  "Namespace-namespaceB.md",
  "Enumeration-enumItemA.md",
  "Enumeration-enumItemB.md",
  "Class-ClassItemA.md",
  "Class-ClassItemA.md#constructor",
  "Class-ClassItemB.md",
  "Class-ClassItemB.md#constructor",
  "Interface-InterfaceItemA.md",
  "Interface-InterfaceItemA.md#prop",
  "Interface-InterfaceItemB.md",
  "Interface-InterfaceItemB.md#prop",
]
`;

exports[`Theme: url should getUrls' 1`] = `
Array [
  "Exports.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "Home.md",
  "Exports.md#declarationitema",
  "Exports.md#declarationitemb",
  "Exports.md#functionitema",
  "Exports.md#functionitemb",
  "Namespace-namespaceA.md",
  "Class-SomeNestedClass.md",
  "Class-SomeNestedClass.md#constructor",
  "Namespace-namespaceB.md",
  "Enumeration-enumItemA.md",
  "Enumeration-enumItemB.md",
  "Class-ClassItemA.md",
  "Class-ClassItemA.md#constructor",
  "Class-ClassItemB.md",
  "Class-ClassItemB.md#constructor",
  "Interface-InterfaceItemA.md",
  "Interface-InterfaceItemA.md#prop",
  "Interface-InterfaceItemB.md",
  "Interface-InterfaceItemB.md#prop",
]
`;
